<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        android:paddingBottom="24dp">

        <!--
        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        -->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_dementia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_dementia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dementia_min"
                    android:adjustViewBounds="true" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView_dementia"
                    android:padding="16dp"
                    android:text="@string/menu_dementia"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right"
                    android:layout_alignBottom="@id/imageView_dementia"
                    android:layout_alignRight="@id/imageView_dementia"
                    android:padding="8dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_dental"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_dental"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dental_min"
                    android:adjustViewBounds="true" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView_dental"
                    android:padding="16dp"
                    android:text="@string/menu_dental"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right"
                    android:layout_alignBottom="@id/imageView_dental"
                    android:layout_alignRight="@id/imageView_dental"
                    android:padding="8dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_homehealth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_homehealth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/homehealth_min"
                    android:adjustViewBounds="true" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView_homehealth"
                    android:padding="16dp"
                    android:text="@string/menu_homehealth"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right"
                    android:layout_alignBottom="@id/imageView_homehealth"
                    android:layout_alignRight="@id/imageView_homehealth"
                    android:padding="8dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>